<resources>
    <string name="app_name">Shortly</string>
    <string name="shortly">Shortly</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="shorten_info">Paste your first link into the field to shorten it</string>
    <string name="hint_edittext">Shorten a link here..</string>
    <string name="btn_shorten_text">SHORTEN IT!</string>
    <string name="et_error_text">Please add a link here</string>
    <string name="copy">copy</string>
    <string name="warning_link_history">Your Link History</string>
    <string name="no_data_available">No History !</string>
    <string name="copied">Copied !</string>
    <string name="rendering_please_wait">Loading.. Please Wait..</string>
    <string name="item_deleted">Item Deleted</string>
</resources>